# klatt

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
examples/: _params.rs  make_sound.rs
klatt/: Cargo.toml  log
klatt/examples/: make_sound.rs
klatt/src/: app_params.rs  klatt.rs  lib.rs  poly_real.rs  traits.rs
reference-implementation/: Cargo.toml  README.md
reference-implementation/src/: klatt.rs  main.rs  poly_real.rs
src/: app_params.rs  klatt.rs  lib.rs  lib_tests.rs  main.rs  math.rs  poly_real.rs
tests/: check_values_against_reference.rs  tests.rs
