[package]
name = "klatt"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Klatt Formant Speech Synthesis, without the standard library!"
readme = "README.md"
repository = "https://github.com/TTWNO/klatt/"
keywords = ["klatt"]
categories = ["no-std", "embedded", "speech", "multimedia::audio"]

[features]
default = ["std"]
std = []
libm = ["dep:libm"]

[dependencies]
libm = { version = "0.2.11", default-features = false, optional = true }
rand = { version = "0.9.0", default-features = false }

[dev-dependencies]
hound = "3.5.1"
rand = { version = "0.9.0", default-features = false }
