[package]
name = "klatt"
version = "0.1.0"
edition = "2024"

[dependencies]
libm = { version = "0.2.11", default-features = false }
rand = { version = "0.9.0", default-features = false }

[dev-dependencies]
hound = "3.5.1"
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }
